--- a/fastlane/metadata/android/acab.naiveha.upnpkino.yml
+++ b/fastlane/metadata/android/acab.naiveha.upnpkino.yml
@@ -25,7 +25,7 @@ Themes:
 Build:
   - VerCode: 1
     Version: "1.0"
-    commit: "your_commit_hash_here" # <-- FIX THIS
+    commit: "f0ab74d"
     subdir: "app"
     gradle:
       - "assembleRelease"
